Add 3 Div Style to Home

--- a/index.html
+++ b/index.html
@@ -36,23 +36,30 @@
         </nav>
     </header>
 
-    <div>
+    <div class="Top-Container">
         <p>With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's premere
             Black businesses.
         </p>
     </div>
-    <div>
-        <a href="pages/nonprofit.html">Trends&trade; Care Foundation</a>
+
+    <hr>
+    <div class="Middle-Container">
+        <div id="nonprofit">
+            <a href="pages/nonprofit.html">Trends&trade; Care Foundation</a>
+        </div>
+        <div id="barbershop">
+            <a href="pages/barbershop.html">Trends&trade; GMC Barbershop</a>
+        </div>
+        <div id="incncompany">
+            <a href="pages/IncnCmpany.html">Trends&trade; Inc & Company</a>
+        </div>
     </div>
-    <div>
-        <a href="pages/barbershop.html">Trends&trade; GMC Barbershop</a>
-    </div>
-    <div>
-        <a href="pages/IncnCmpany.html">Trends&trade; Inc & Company</a>
-    </div>
-    <div>
+    
+    
+    <div class="Podcast">
         <embed src="" type="">
     </div>
+    <hr>
 
     <footer>
         <nav>
