--- a/index.html
+++ b/index.html
@@ -1,75 +1,82 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
-<!--
-    TO-DO:
-    - Setup all HTML Links (Check)
-        index.html (Check)
-        nonprofit.html (Check)
-        barbershop.html (Check)
-        IncnCompany.html (Check)
-        about.html (Check)
-        contact.html (Check)
-    - Set CSS Stylesheet
-    - Style All Page Divs
-    - Add Functionality
-    - Add to GoDaddy Domain
-    - Go Live!!!
--->
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trends&trade; Inc</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+    <!-- Bootstrap CSS v5.1.3 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+    <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="pages/nonprofit.html">Trends Care Foundation</a>
-            <a href="pages/barbershop.html">Trends GMC Barbershop</a>
-            <a href="pages/IncnCmpany.html">Trends Inc & Company</a>
-            <a href="pages/about.html">About Us</a>
-            <a href="pages/contact.html">Contact Us</a>
-        </nav>
-    </header>
 
-    <div class="Top-Container">
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="">Trends&trade; Inc.</a>
+        <button class="navbar-toggler" type="button" style="color: white;" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="">About</a>
+                </li>
+                <li class="nav-link dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false" style="padding: 0px;">
+                        Trends Family
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                        <li><a class="dropdown-item" href="pages/nonprofit.html">Trends Care Foundation</a></li>
+                        <li><a class="dropdown-item" href="pages/barbershop.html">Trends GMC Barbershop</a></li>
+                        <li><a class="dropdown-item" href="pages/IncnCmpany.html">Trends Inc & Company</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="" style="padding-right: 10px;">Login</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <section id="title">
         <p>With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's premere
             Black businesses.
         </p>
-    </div>
+    </section>
 
-    <hr>
-    <div class="Middle-Container">
-        <div id="nonprofit">
-            <a href="pages/nonprofit.html">Trends&trade; Care Foundation</a>
+    <section id="Windows">
+        <div class="row">
+                <div class="col-md-4" style="background-color: blue;">
+                   <a href="pages/nonprofit.html" class="stretched-link">Trends Care Foundation</a> 
+                </div>
+                <div class="col-md-4" style="background-color: white;">
+                    Trends GMC Barbershop
+                </div>
+                <div class="col-md-4" style="background-color: red;">
+                    Trends Inc & Company
+                </div>
         </div>
-        <div id="barbershop">
-            <a href="pages/barbershop.html">Trends&trade; GMC Barbershop</a>
-        </div>
-        <div id="incncompany">
-            <a href="pages/IncnCmpany.html">Trends&trade; Inc & Company</a>
-        </div>
-    </div>
-    
-    
-    <div class="Podcast">
-        <embed src="" type="">
-    </div>
-    <hr>
+    </section>
 
-    <footer>
-        <nav>
-            <a href="pages/nonprofit.html">Trends Care Foundation</a>
-            <a href="pages/barbershop.html">Trends GMC Barbershop</a>
-            <a href="pages/IncnCmpany.html">Trends Inc & Company</a>
-            <a href="pages/about.html">About Us</a>
-            <a href="pages/contact.html">Contact Us</a>
-        </nav>
-    </footer>
+
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
