--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="">Trends&trade; Inc.</a>
-        <button class="navbar-toggler" type="button" style="color: white;" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,13 +58,13 @@
     <section id="Windows">
         <div class="row">
                 <div class="col-md-4" style="background-color: blue;">
-                   <a href="pages/nonprofit.html" class="stretched-link">Trends Care Foundation</a> 
+                   <a href="pages/nonprofit.html">Trends Care Foundation</a> 
                 </div>
                 <div class="col-md-4" style="background-color: white;">
-                    Trends GMC Barbershop
+                    <a href="pages/barbershop.html">Trends GMC Barbershop</a>
                 </div>
                 <div class="col-md-4" style="background-color: red;">
-                    Trends Inc & Company
+                    <a href="pages/IncnCmpany.html">Trends Inc & Company</a>
                 </div>
         </div>
     </section>
