Add Logo to Home

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </nav>
 
     <section id="title">
+        <img src="Images/IMG_7993.jpg" class="img-fluid" alt="Trends&trade; Inc Logo">
         <p>With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's premere
             Black businesses.
         </p>
