--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="css/styles.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -58,15 +62,15 @@
 
     <section id="Windows">
         <div class="row">
-                <div class="col-md-4" style="background-color: blue;">
-                   <a href="pages/nonprofit.html">Trends Care Foundation</a> 
-                </div>
-                <div class="col-md-4" style="background-color: white;">
-                    <a href="pages/barbershop.html">Trends GMC Barbershop</a>
-                </div>
-                <div class="col-md-4" style="background-color: red;">
-                    <a href="pages/IncnCmpany.html">Trends Inc & Company</a>
-                </div>
+            <div class="col-md-4" style="background-color: blue;">
+                <a href="pages/nonprofit.html">Trends Care Foundation</a>
+            </div>
+            <div class="col-md-4" style="background-color: white;">
+                <a href="pages/barbershop.html">Trends GMC Barbershop</a>
+            </div>
+            <div class="col-md-4" style="background-color: red;">
+                <a href="pages/IncnCmpany.html">Trends Inc & Company</a>
+            </div>
         </div>
     </section>
 
