--- a/index.html
+++ b/index.html
@@ -24,41 +24,46 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">Trends&trade; Inc.</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="">About</a>
-                </li>
-                <li class="nav-link dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false" style="padding: 0px;">
-                        Trends Family
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                        <li><a class="dropdown-item" href="pages/nonprofit.html">Trends Care Foundation</a></li>
-                        <li><a class="dropdown-item" href="pages/barbershop.html">Trends GMC Barbershop</a></li>
-                        <li><a class="dropdown-item" href="pages/IncnCmpany.html">Trends Inc & Company</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="" style="padding-right: 10px;">Login</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div class="container-fluid">
 
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="">Trends&trade; Inc.</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="">About</a>
+                    </li>
+                    <li class="nav-link dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" style="padding: 0px;">
+                            Trends Family
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item" href="pages/nonprofit.html">Trends Care Foundation</a></li>
+                            <li><a class="dropdown-item" href="pages/barbershop.html">Trends GMC Barbershop</a></li>
+                            <li><a class="dropdown-item" href="pages/IncnCmpany.html">Trends Inc & Company</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="" style="padding-right: 10px;">Login</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    
     <section id="title">
-        <img src="Images/IMG_7993.jpg" class="img-fluid" alt="Trends&trade; Inc Logo">
+        <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
         <p>With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's premere
             Black businesses.
         </p>
     </section>
+
+</div>
 
     <section id="Windows">
         <div class="row">
