Increase p-tag font size, add new font for anchor tags

--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="css/styles.css">
 
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Jura:wght@700&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome Icons -->
+    <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js"
+        integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
@@ -55,15 +60,16 @@
                 </ul>
             </div>
         </nav>
-    
-    <section id="title">
-        <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
-        <p>With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's premere
-            Black businesses.
-        </p>
-    </section>
 
-</div>
+        <section id="title">
+            <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
+            <p>With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's
+                premere
+                Black businesses.
+            </p>
+        </section>
+
+    </div>
 
     <section id="Windows">
         <div class="row">
@@ -78,7 +84,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
