--- a/pages/nonprofit.html
+++ b/pages/nonprofit.html
@@ -11,6 +11,15 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/styles.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Jura:wght@700&display=swap" rel="stylesheet">
+
+    <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js"
+        integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
@@ -38,8 +47,10 @@
 
     <footer class="container-fluid">
         <div class="d-grid gap-1 col-6 mx-auto">
-            <button type="button" class="btn btn-outline-secondary btn-lg"><a href="../index.html">HOME</a></button>
-            <button type="button" class="btn btn-outline-secondary btn-lg"><a href="nonprofit.html">TOP</a></button>
+            <button type="button" class="btn btn-outline-secondary btn-sm"><i class="fal fa-angle-left"></i> <a
+                    href="../index.html">HOME</a></button>
+            <button type="button" class="btn btn-outline-secondary btn-sm"><i class="fal fa-angle-up"></i> <a
+                    href="nonprofit.html">TOP</a></button>
         </div>
     </footer>
 
