--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section id="title">
             <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
             <p>With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's
-                premere
+                premier
                 Black businesses.
             </p>
         </section>
