Work on Home with Barbershop window add

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <section id="title">
             <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
-            <p>With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's
+            <p id="mantra">With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's
                 premier
                 Black businesses.
             </p>
@@ -71,16 +71,18 @@
 
     </div>
 
+    
+    
     <section id="Windows">
         <div class="row">
-            <div class="col-md-4" style="background-color: blue;">
-                <a href="pages/nonprofit.html">Trends Care Foundation</a>
+            <div class="col-md-4" id="nonprofit-window">
+                <h3 id="window-link"><a class="href" href="pages/nonprofit.html">Trends Care Foundation</a></h3>
             </div>
-            <div class="col-md-4" style="background-color: white;">
-                <a href="pages/barbershop.html">Trends GMC Barbershop</a>
+            <div class="col-md-4" id="barbershop-window">
+                <h3 id="window-link"><a href="pages/barbershop.html">Trends GMC Barbershop</a></h3>
             </div>
-            <div class="col-md-4" style="background-color: red;">
-                <a href="pages/IncnCmpany.html">Trends Inc & Company</a>
+            <div class="col-md-4" id="clothing-window">
+                <h3 id="window-link"><a href="pages/IncnCmpany.html">Trends Inc & Company</a></h3>
             </div>
         </div>
     </section>
