Move About and Contact to Home

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
         <section id="title">
             <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
-            <p id="mantra">With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the city's
+            <p id="mantra">With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the
+                city's
                 premier
                 Black businesses.
             </p>
@@ -71,8 +72,8 @@
 
     </div>
 
-    
-    
+
+    <!-- Main Windows -->
     <section id="Windows">
         <div class="row">
             <div class="col-md-4" id="nonprofit-window">
@@ -86,6 +87,46 @@
             </div>
         </div>
     </section>
+
+    <!-- Embedded Podcast -->
+    <div class="container-fluid">
+        <section id="podcast">
+            <div class="col-md-3">
+                <iframe src="" frameborder="0"></iframe>
+            </div>
+        </section>
+    </div>
+
+    <!-- About/Contact Page -->
+    <div class="container-fluid">
+        <section>
+            <div class="col-12" id="about">
+                <p> About Trends&trade; Inc </p>
+            </div>
+            <div class="col-12" id="contact">
+                <h2>Contact Trends Inc.</h2>
+                <form action="mailto:" method="post" enctype="text/plain">
+                    <label>Name:</label>
+                    <input type="text" name="inputName" value=""><br>
+                    <label>Company:</label>
+                    <input type="text" name="inputCompany" value=""><br>
+                    <label>Email:</label>
+                    <input type="email" name="inputEmail" value=""><br>
+                    <label>Message:</label><br>
+                    <textarea name="inputMessage" cols="30" rows="10"></textarea><br>
+                    <input type="submit">
+                </form>
+            </div>
+        </section>
+    </div>
+
+    <!-- Footer/Legal -->
+    <footer class="container-fluid">
+        Trends&trade; Inc. and it's affiliated companies are a registered trademark of the the Trends&trade; brand.
+        <br>&copy;2021 All rights reserved
+        <br>
+        <br>Website Proudly Crafted by Design House eMans&copy;
+    </footer>
 
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
