--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
     <!-- Main Windows -->
     <section id="Windows">
         <div class="row">
-            <div class="col-md-4" id="nonprofit-window">
-                <h3 id="window-link"><a class="href" href="pages/nonprofit.html">Trends Care Foundation</a></h3>
+            <div class="col-md-4 justify-content-center" id="nonprofit-window">
+                <h3 id="window-link"><a href="pages/nonprofit.html">Trends Care Foundation</a></h3>
             </div>
-            <div class="col-md-4" id="barbershop-window">
+            <div class="col-md-4 d-flex justify-content-center" id="barbershop-window">
                 <h3 id="window-link"><a href="pages/barbershop.html">Trends GMC Barbershop</a></h3>
             </div>
-            <div class="col-md-4" id="clothing-window">
+            <div class="col-md-4 d-flex justify-content-center" id="clothing-window">
                 <h3 id="window-link"><a href="pages/IncnCmpany.html">Trends Inc & Company</a></h3>
             </div>
         </div>
