--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Main Windows -->
     <section id="Windows">
         <div class="row">
-            <div class="col-md-4 justify-content-center" id="nonprofit-window">
+            <div class="col-md-4 d-flex justify-content-center" id="nonprofit-window">
                 <h3 id="window-link"><a href="pages/nonprofit.html">Trends Care Foundation</a></h3>
             </div>
             <div class="col-md-4 d-flex justify-content-center" id="barbershop-window">
