Adjust Title Section

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 <body>
 
+    <!-- Navbar -->
     <div class="container-fluid">
 
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" style="font-size: 1.5rem;" href="index.html">Trends&trade; Inc.</a>
+        <nav class="navbar navbar-expand-lg navbar-dark end-0">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -42,6 +42,12 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" style="color: blue;" href="">Newsletter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="" style="padding-right: 10px; color: red;">Login</a>
                     </li>
                     <li class="nav-link dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
@@ -54,23 +60,35 @@
                             <li><a class="dropdown-item" href="pages/IncnCmpany.html">Trends Inc & Company</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="" style="padding-right: 10px;">Login</a>
-                    </li>
                 </ul>
             </div>
         </nav>
 
+        <!-- Title -->
         <section id="title">
-            <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
-            <p id="mantra">With their hand on the pulse of Kansas City, Trends&trade; Inc is your one-stop-shop for the
-                city's
-                premier
-                Black businesses.
-            </p>
+            <div class="row">
+                <div class="col-md-6 position-relative">
+                    <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
+                </div>
+                <div class="col-md-6 position-relative bottom-0">
+                    <h1 id="mantra">The official hub of Kansas City's premier Black businesses</h1>
+                </div>
+            </div>
         </section>
-
     </div>
+    <hr>
+
+
+    <!-- About Section -->
+    <section class="container-fluid" id="about-section">
+        <div>
+
+            <h2>About Trends Inc.</h2>
+
+
+        </div>
+    </section>
+    <hr>
 
 
     <!-- Main Windows -->
