--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <div class="col-md-6 position-relative">
                     <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
                 </div>
-                <div class="col-md-6 position-relative bottom-0">
-                    <h1 id="mantra">The official hub of Kansas City's premier Black businesses</h1>
+                <div class="col-md-6">
+                    <h1 class="text-md-end text-center" id="mantra">The official hub of Kansas City's premier Black businesses</h1>
                 </div>
             </div>
         </section>
@@ -86,6 +86,11 @@
             <h2>About Trends Inc.</h2>
 
 
+        </div>
+
+        <div>
+            <button class="">JOIN</button>
+            <button class="">DIRECTORY</button>
         </div>
     </section>
     <hr>
