Addition of Embedded Podcast

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
                 </div>
                 <div class="col-md-6">
-                    <h1 class="text-md-end text-center" id="mantra">The official hub of Kansas City's premier Black businesses</h1>
+                    <h1 class="text-md-end text-center" id="mantra">The official hub of Kansas City's premier Black
+                        businesses</h1>
                 </div>
             </div>
         </section>
@@ -89,8 +90,8 @@
         </div>
 
         <div>
-            <button class="">JOIN</button>
-            <button class="">DIRECTORY</button>
+            <button type="button" class="btn btn-dark" id="home-join">JOIN</button>
+            <button type="button" class="btn btn-dark" id="home-directory">DIRECTORY</button>
         </div>
     </section>
     <hr>
@@ -114,6 +115,7 @@
     <!-- Embedded Podcast -->
     <div class="container-fluid">
         <section id="podcast">
+            <h1>Trends Podcast</h1>
             <div class="col-md-3">
                 <iframe src="" frameborder="0"></iframe>
             </div>
@@ -121,7 +123,7 @@
     </div>
 
     <!-- About/Contact Page -->
-    <div class="container-fluid">
+    <div class="about-contact container-fluid">
         <section>
             <div class="col-12" id="about">
                 <p> About Trends&trade; Inc </p>
@@ -144,11 +146,12 @@
     </div>
 
     <!-- Footer/Legal -->
-    <footer class="container-fluid">
-        Trends&trade; Inc. and it's affiliated companies are a registered trademark of the the Trends&trade; brand.
-        <br>&copy;2021 All rights reserved
-        <br>
-        <br>Website Proudly Crafted by Design House eMans&copy;
+    <footer class="footer-legal container-fluid">
+        <p>Trends&trade; Inc. and it's affiliated companies are a registered trademark of the the Trends&trade; brand.
+            <br>&copy;2021 All rights reserved
+            <br>
+            <br>Website Proudly Crafted by Design House eMans&copy;
+        </p>
     </footer>
 
     <!-- Bootstrap JavaScript Libraries -->
