Align Navbar Text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" style="color: blue;" href="">Newsletter</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="" style="padding-right: 10px; color: red;">Login</a>
+                        <a class="nav-link" href="" style="color: red;">Login</a>
                     </li>
                     <li class="nav-link dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
