Adjust Title Section

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 
 <body>
 
-    <!-- Navbar -->
+    <!-- Title Block  -->
     <div class="container-fluid">
 
+        <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark end-0">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -64,18 +65,22 @@
             </div>
         </nav>
 
-        <!-- Title -->
-        <section id="title">
-            <div class="row">
-                <div class="col-md-6 position-relative">
+        <div class="row">
+            <!-- Title Left -->
+            <div class="col-md-6" id="title-left">
+                <div class="col-6 position-relative start-0 top-0">
                     <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
                 </div>
-                <div class="col-md-6">
-                    <h1 class="text-md-end text-center" id="mantra">The official hub of Kansas City's premier Black
+            </div>
+
+            <!-- Title Right -->
+            <div class="col-md-6 justify-content-center" id="title-right">
+                <div class="col-9" id="mantra">
+                    <h1>The official hub of Kansas City's premier Black
                         businesses</h1>
                 </div>
             </div>
-        </section>
+        </div>
     </div>
     <hr>
 
