--- a/pages/nonprofit.html
+++ b/pages/nonprofit.html
@@ -48,9 +48,9 @@
                             Trends Family
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="pages/nonprofit.html">Trends Care Foundation</a></li>
-                            <li><a class="dropdown-item" href="pages/barbershop.html">Trends GMC Barbershop</a></li>
-                            <li><a class="dropdown-item" href="pages/IncnCmpany.html">Trends Inc & Company</a></li>
+                            <li><a class="dropdown-item" href="nonprofit.html">Trends Care Foundation</a></li>
+                            <li><a class="dropdown-item" href="barbershop.html">Trends GMC Barbershop</a></li>
+                            <li><a class="dropdown-item" href="IncnCmpany.html">Trends Inc & Company</a></li>
                         </ul>
                     </li>
                 </ul>
