Adjust Title Section

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
         <div class="row">
             <!-- Title Left -->
             <div class="col-md-6" id="title-left">
-                <div class="col-6 position-relative start-0 top-0">
+                <div class="col-md-6 position-relative start-0 top-0">
                     <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
                 </div>
             </div>
 
             <!-- Title Right -->
             <div class="col-md-6 justify-content-center" id="title-right">
-                <div class="col-9" id="mantra">
+                <div class="col-md-9" id="mantra">
                     <h1>The official hub of Kansas City's premier Black
                         businesses</h1>
                 </div>
