Style Home About Section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
         <div>
 
             <h2>About Trends Inc.</h2>
-
+            <p id="about-text"> <em>*Replace With Your Own Description of the Trends Parent Company*</em><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Arcu cursus euismod quis viverra. Libero nunc consequat interdum varius sit amet.
+                Mi sit amet mauris commodo quis. Curabitur gravida arcu ac tortor.</p>
 
         </div>
 
