Add Favicon and Logo

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js"
         integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous">
     </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="Images/favicon.ico">
 </head>
 
 <body>
@@ -33,7 +36,8 @@
     <div class="container-fluid">
 
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark end-0">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="index.html">Trends Inc.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -66,15 +70,15 @@
         </nav>
 
         <div class="row">
-            <!-- Title Left -->
-            <div class="col-md-6" id="title-left">
-                <div class="col-md-6 position-relative start-0 top-0">
-                    <img src="Images/IMG_7993.jpg" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
+            <!-- Title Top -->
+            <div class="col-md-12" id="title">
+                <div class="col-md-12 position-relative start-0 top-0">
+                    <img src="Images/Logo.png" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
                 </div>
-            </div>
 
-            <!-- Title Right -->
-            <div class="col-md-6 justify-content-center" id="title-right">
+
+                <!-- Title Bottom -->
+
                 <div class="col-md-9" id="mantra">
                     <h1>The official hub of Kansas City's premier Black
                         businesses</h1>
