Format About Section, Add New Text Styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Jura:wght@700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Croissant+One&family=Spinnaker&display=swap"
+        rel="stylesheet">
 
     <!-- Font Awesome Icons -->
     <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js"
@@ -70,16 +72,13 @@
         </nav>
 
         <div class="row">
-            <!-- Title Top -->
+            <!-- Title -->
             <div class="col-md-12" id="title">
-                <div class="col-md-12 position-relative start-0 top-0">
+                <div class="position-relative top-5">
                     <img src="Images/Logo.png" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
                 </div>
 
-
-                <!-- Title Bottom -->
-
-                <div class="col-md-9" id="mantra">
+                <div class="col-md-12" id="mantra">
                     <h1>The official hub of Kansas City's premier Black
                         businesses</h1>
                 </div>
@@ -101,7 +100,7 @@
 
         </div>
 
-        <div>
+        <div class="home-buttons">
             <button type="button" class="btn btn-dark" id="home-join">JOIN</button>
             <button type="button" class="btn btn-dark" id="home-directory">DIRECTORY</button>
         </div>
@@ -127,7 +126,7 @@
     <!-- Embedded Podcast -->
     <div class="container-fluid">
         <section id="podcast">
-            <h1>Trends Podcast</h1>
+            <h2>Trends Podcast</h2>
             <div class="col-md-3">
                 <iframe src="" frameborder="0"></iframe>
             </div>
