Add background image to about

--- a/index.html
+++ b/index.html
@@ -99,14 +99,12 @@
                 Mi sit amet mauris commodo quis. Curabitur gravida arcu ac tortor.</p>
 
         </div>
-
+        
         <div class="home-buttons">
-            <button type="button" class="btn btn-dark" id="home-join">JOIN</button>
-            <button type="button" class="btn btn-dark" id="home-directory">DIRECTORY</button>
+            <button type="button" class="btn btn-outline-dark btn-lg" id="home-join">JOIN</button>
+            <button type="button" class="btn btn-outline-dark btn-lg" id="home-directory">DIRECTORY</button>
         </div>
     </section>
-    <hr>
-
 
     <!-- Main Windows -->
     <section id="Windows">
@@ -162,6 +160,8 @@
             <br>&copy;2021 All rights reserved
             <br>
             <br>Website Proudly Crafted by Design House eMans&copy;
+            <br>
+            Icons made by <a href="https://www.flaticon.com/authors/smashicons" id="att" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" id="att" title="Flaticon">www.flaticon.com</a>
         </p>
     </footer>
 
