Add backgroud to Podcast,and contact section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </section>
 
     <!-- Main Windows -->
-    <section id="Windows">
+    <section class="container-fluid" id="Windows">
         <div class="row">
             <div class="col-md-4 d-flex justify-content-center" id="nonprofit-window">
                 <h3 id="window-link"><a href="pages/nonprofit.html">Trends Care Foundation</a></h3>
@@ -122,7 +122,7 @@
     </section>
 
     <!-- Embedded Podcast -->
-    <div class="container-fluid">
+    <div class="container-fluid col-12">
         <section id="podcast">
             <h2>Trends Podcast</h2>
             <div class="col-md-3">
@@ -134,9 +134,6 @@
     <!-- About/Contact Page -->
     <div class="about-contact container-fluid">
         <section>
-            <div class="col-12" id="about">
-                <p> About Trends&trade; Inc </p>
-            </div>
             <div class="col-12" id="contact">
                 <h2>Contact Trends Inc.</h2>
                 <form action="mailto:" method="post" enctype="text/plain">
