Fix Navbar padding

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="col-md-12" id="mantra">
-                    <h1>The official hub of Kansas City's premier Black
+                    <h1>The official guide to Kansas City's premier Black
                         businesses</h1>
                 </div>
             </div>
