--- a/index.html
+++ b/index.html
@@ -1,180 +1,140 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Trends&trade; Inc</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trends Inc&trade;</title>
 
+    <!-- CSS Styles -->
+    <link rel="stylesheet" href="styles/styles.css">
 
-    <!-- Bootstrap CSS v5.1.3 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-
-    <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="css/styles.css">
-
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Croissant+One&family=Spinnaker&display=swap"
-        rel="stylesheet">
-
-    <!-- Font Awesome Icons -->
-    <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js"
-        integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous">
-    </script>
+    <!-- Alpine JS  -->
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <!-- Favicon -->
-    <link rel="icon" href="Images/favicon.ico">
+    <link rel="icon" href="assets/favicon.ico">
+
 </head>
 
 <body>
+    <!-- Navbar -->
+    <nav class="site-nav grid">
+        <ul>
+            <li><a href="#about">About Trends</a></li>
+            <li><a href="#services">Trends Family</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#">Sign Up/Sign In</a></li>
+        </ul>
+    </nav>
 
-    <!-- Title Block  -->
-    <div class="container-fluid">
-
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="index.html">Trends Inc.</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" style="color: blue;" href="">Newsletter</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="" style="color: red;">Login</a>
-                    </li>
-                    <li class="nav-link dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false" style="padding: 0px;">
-                            Trends Family
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="pages/nonprofit.html">Trends Care Foundation</a></li>
-                            <li><a class="dropdown-item" href="pages/barbershop.html">Trends GMC Barbershop</a></li>
-                            <li><a class="dropdown-item" href="pages/IncnCmpany.html">Trends Inc & Company</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-        <div class="row">
-            <!-- Title -->
-            <div class="col-md-12" id="title">
-                <div class="position-relative top-5">
-                    <img src="Images/Logo.png" class="img-fluid" id="homeLogo" alt="Trends&trade; Inc Logo">
-                </div>
-
-                <div class="col-md-12" id="mantra">
-                    <h1>The official guide to Kansas City's premier Black
-                        businesses</h1>
-                </div>
-            </div>
+    <!-- Header -->
+    <header id="header" class="grid">
+        <div class="header-logo">
+            <img src="assets/Logo.png" alt="Trends Inc Logo">
         </div>
-    </div>
-    <hr>
-
-
-    <!-- About Section -->
-    <section class="container-fluid" id="about-section">
-        <div>
-
-            <h2>About Trends Inc.</h2>
-            <p id="about-text"> <em>*Replace With Your Own Description of the Trends Parent Company*</em><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Arcu cursus euismod quis viverra. Libero nunc consequat interdum varius sit amet.
-                Mi sit amet mauris commodo quis. Curabitur gravida arcu ac tortor.</p>
-
+        <div class="header-title">
+            <h1>Trends Inc.</h1>
         </div>
+        <div class="header-text">
+            <p class="slogan">The official guide to Kansas City's premier Black
+                businesses</p>
+        </div>
+        <div class="header-nav">
+            <ul class="h-nav">
+                <li><a href="#podcast"><img src="assets/voice.png" alt="Talking Heads Podcast"></a></li>
+                <li><a href="#"><img src="assets/rss-feed.png" alt="News Feed"></a></li>
+                <li><a href="#"><img src="assets/phone-book.png" alt="Directory"></a></li>
+            </ul>
+        </div>
+    </header>
 
-        <div class="home-buttons">
-            <button type="button" class="btn btn-outline-dark btn-lg" id="home-join">JOIN</button>
-            <button type="button" class="btn btn-outline-dark btn-lg" id="home-directory">DIRECTORY</button>
+    <!-- About -->
+    <section id="about">
+        <h3>About Trends Inc.</h3>
+        <div class="about-text grid">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ratione vero quasi velit repellendus
+                reprehenderit rem. Qui tenetur laudantium, magni soluta ex, ipsam mollitia, magnam ab incidunt iure et
+                blanditiis.</p>
+        </div>
+        <div class="about-links grid">
+            <button type="button">Directory</button>
+            <button type="button">News Feed</button>
         </div>
     </section>
 
-    <!-- Main Windows -->
-    <section class="container-fluid" id="Windows">
-        <div class="row">
-            <div class="col-md-4 d-flex justify-content-center" id="nonprofit-window">
-                <h3 id="window-link"><a href="pages/nonprofit.html">Trends Care Foundation</a></h3>
-            </div>
-            <div class="col-md-4 d-flex justify-content-center" id="barbershop-window">
-                <h3 id="window-link"><a href="pages/barbershop.html">Trends GMC Barbershop</a></h3>
-            </div>
-            <div class="col-md-4 d-flex justify-content-center" id="clothing-window">
-                <h3 id="window-link"><a href="pages/IncnCmpany.html">Trends Inc & Company</a></h3>
-            </div>
+    <!-- Services -->
+    <section id="services">
+        <h3>Trends Family</h3>
+        <div class="service-cards grid">
+            <a href="">
+                <img src="assets/careslogo.png" alt="Trends Cares Foundation">
+                <h4>Trends Cares Foundation</h4>
+            </a>
+            <a href="">
+                <img src="assets/shoplogo.png" alt="Trends GMC Barbershop">
+                <h4>Trends GMC Barbershop</h4>
+            </a>
+            <a href="">
+                <img src="assets/incncologo.png" alt="Trends Inc & Company">
+                <h4>Trends Inc & Company</h4>
+            </a>
         </div>
     </section>
 
-    <!-- Embedded Podcast -->
-    <div class="container-fluid col-12" id="podcast-outer">
-        <section id="podcast">
-            <h2>Trends Podcast</h2>
-            <div class="col-md-3">
-                <iframe src="" frameborder="0"></iframe>
-            </div>
-        </section>
-    </div>
+    <!-- Podcast -->
+    <section id="podcast">
+        <h3>Talking Heads Podcast</h3>
+        <div class="podcast-frame grid">
+            <iframe src="" frameborder="0">Podcast Dropping Soon!</iframe>
+        </div>
+    </section>
 
-    <!-- About/Contact Page -->
-    <div class="about-contact container-fluid">
-        <section>
-            <h2>Contact Trends Inc.</h2>
-            <form>
-                <div class="mb-3">
-                    <label for="formGroupExampleInput" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput">
-                </div>
-                <div class="mb-3">
-                    <label for="formGroupExampleInput2" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2">
-                </div>
-                <div class="mb-3">
-                    <label for="formGroupExampleInput2" class="form-label">Message</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput3">
-                </div>
-                <div class="mb-3">
-                    <input type="submit">
-                </div>
-            </form>
-        </section>
-    </div>
+    <!-- Contact -->
+    <section id="contact">
+        <h3>Contact Trends Inc.</h3>
+        <form action="" >
+            <input type="text" placeholder="Name...">
+            <input type="text" placeholder="Company...">
+            <input type="email" placeholder="Email...">
+            <input type="tel" placeholder="Number...">
+            <textarea name="" id="" cols="30" rows="1" placeholder="message..."></textarea>
+            <br>
+            <button type="submit">Submit</button>
+        </form>
+        
+            <ul>
+                <li>(XXX) XXX-XXXX</li>
+                <li>XXXX@DOMAIN.COM</li>
+                <li>XXXX STREET DR. Kansas City, MO 64118</li>
+            </ul>
+        
+    </section>
 
-    <!-- Footer/Legal -->
-    <footer class="footer-legal container-fluid">
+    <!-- Legal -->
+    <footer id="legal">
         <p>Trends&trade; Inc. and it's affiliated companies are a registered trademark of the the Trends&trade; brand.
             <br>&copy;2021 All rights reserved
             <br>
             <br>Website Proudly Crafted by Design House eMans&copy;
             <br>
-            Icons made by <a href="https://www.flaticon.com/authors/smashicons" id="att"
-                title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" id="att"
-                title="Flaticon">www.flaticon.com</a>
         </p>
-    </footer>
 
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-    </script>
+        <ul class="socials">
+            <li><a href=""><img src="assets/instagram.png" alt="instagram"></a></li>
+            <li><a href=""><img src="assets/twitter.png" alt="twitter"></a></li>
+            <li><a href=""><img src="assets/facebook.png" alt="facebook"></a></li>
+        </ul>
+
+        <p class="attribution">Images and Icons By:<br>
+            <a href="https://www.flaticon.com/free-icons/news-feed" title="news feed icons">Mayor Icons -
+                Flaticon</a><br><a href="https://www.flaticon.com/free-icons/directory"
+                title="directory icons">Elastic1 - Flaticon</a><br><a
+                href="https://www.flaticon.com/free-icons/" title="instagram icons">Freepik -
+                Flaticon</a></p>
+
+    </footer>
 </body>
 
 </html>
