--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
     <section id="services">
         <h3>Trends Family</h3>
         <div class="service-cards grid">
-            <a href="">
+            <a href="pages/foundation.html">
                 <img src="assets/careslogo.png" alt="Trends Cares Foundation">
                 <h4>Trends Cares Foundation</h4>
             </a>
-            <a href="">
+            <a href="pages/barbershop.html">
                 <img src="assets/shoplogo.png" alt="Trends GMC Barbershop">
                 <h4>Trends GMC Barbershop</h4>
             </a>
-            <a href="">
+            <a href="pages/clothing.html">
                 <img src="assets/incncologo.png" alt="Trends Inc & Company">
                 <h4>Trends Inc & Company</h4>
             </a>
